--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@ body {
 }
 
 .background1 {
-  background-image: url('/assets/img/bg2.jpg');
+  background-image: url('bg2.jpg');
   box-sizing: border-box;
   background-size: cover;
 }
 
 .background2 {
-  background-image: url('/assets/img/bg2.jpg');
+  background-image: url('bg2.jpg');
   box-sizing: border-box;
   background-size: cover;
 }
